must be in the LD_LIBRARY_PATH. Otherwise, an absolute path may be specified.
* isempty-vs-count now provides fixits for all scenarios. Also, cases where
the length is compared using "== 0", "< 1", "> 0" are now reported and have
fixits.
* qt6-\* Porting checks are considered deprecated now and will be removed in
the next release of clazy

Version 1.15
~~~~~~~~~~~~
Released: 2025-06-12

Bugfixes:
 * install-event-filter: Fix crash when there is no child at the given depth. BUG: 464372
 * fully-qualified-moc-types: Fix enum/enum class not being evaluated. BUG: 423780
 * Fixed crash in qstring-comparison-to-implicit-char. BUG: 502458
 * Fixed crash when fully-qualified-moc-types encounters signals with expressions like "std::bitset<int(8)>"
 * Fixed crash in qvariant-template-instantiation

Features:
 * New checks:
  - readlock-detaching
 * Update minimum Clang/LLVM to 19
 * `clazy-standalone --version` contains git version ( output of `git describe`) if it is not a tagged commit
 * Added missing methods to checks for detaching temporary/member lists or maps

Version 1.14
~~~~~~~~~~~~
Released: 2025-04-27

Notes:
 * Clazy warnings for the following line can be disabled, for example: clazy:exclude-next-line=check1,check2
 * Support for compilation against Clang 20
 * increase verbosity of some warning messages
  - checks `function-args-by-value` and `function-args-by-ref`: add function name and parameter name to warning message
  - checks `unused-non-trivial-variable` and `non-pod-global-static`: add variable name to warning message

Features:
 * New checks:
  - qbytearray-conversion-to-c-style

Version 1.13
~~~~~~~~~~~~
Released: 2024-12-28

Features:
 * New Checks:
  - used-qunused-variable

Bugfixes:
 * qstring-arg check provides a fix-it
 * Fixed unused-non-trivial-variable to not warn when [[maybe_unused]] set
 * Fixed qstring-arg for upcoming Qt 6.9
 * Fixed fully-qualified-moc-types false positive for const modifiers of generic arguments